<resources>
    <string name="app_name">Sporting Link</string>
    <string name="title_tips">Tips</string>
    <string name="title_news">News</string>
    <string name="title_matches">Matches</string>
    <string name="title_video">Profile</string>
    <string name="title_discus">discussion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">BetLink sporting</string>
    <string name="title_news2">betLink soccer sports highlights</string>
    <string name="title_videos">betLink  soccer sports videos</string>
    <string name="title_celeb">Birthday</string>
    <string name="title_celebs">BetLink sports Birthday Celebrants</string>
    <string name="ads_banner">ca-app-pub-8324355921112909/8865328587</string>
    <string name="phone">Phone Number</string>
    <string name="user">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="chika">Pope Chika</string>
    <string name="total_post">Total Post</string>
    <string name="total_win">Post Won</string>
    <string name="ttl">0</string>
    <string name="ttw2">0</string>
    <string name="post_tip">Predict Match</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_amt">$0.0</string>
    <string name="today_celeb">Daily Birthday Celebrants</string>
    <string name="addtip">Add Match Prediction Tip</string>
    <string name="league">League/Tournament:</string>
    <string name="match">Daily Match:</string>
    <string name="tip">Prediction  Tip:</string>
    <string name="hint">Tip hint(Optional):</string>
    <string name="forgot_password">forgot password?</string>
    <string name="pass">Password</string>
    <string name="sign_up">New here? Sign-Up</string>
    <string name="dsc">Create BetLink account</string>
    <string name="email">Email address (Optional)</string>
    <string name="dsc2">Enter the phone number you registered with to recover your password</string>
    <string name="rec">Continue</string>
    <string name="phone1">Enter phone number</string>
    <string name="dsc3">"Enter the code sent to your phone number to confirm "</string>
    <string name="code">Enter code</string>
    <string name="news_pass">Enter New password</string>
    <string name="confirm">Confirm</string>
    <string name="dsc4">Enter the code sent to your phone number to confirm registration</string>
    <string name="detail">Short description to support your prediction</string>
    <string name="more">Related videos</string>
    <string name="logout">Sign-Out</string>
    <string name="username">Enter your username</string>
    <string name="wlc1">welcome to sportingLink</string>
    <string name="cash_out_amt">Amount( 1000 = 1$)</string>
    <string name="submit">Submit</string>
    <string name="access_token">EAAU14z8lNVoBAEz7nONud9ym5XoFnJ1FdBpZCvJInmwaRrGUHTM1f4vDIv6oL6SIBoSg6kXs7XV67iJaX0eEFulcWn4LTpZCyFoMtDC94nTeroNZANTpqztVpA6ZAscduXjlZBuc4ZBUzqAWhZCZB5DPF5TmwdsXolnUZBH2cVOSWRXwMBGl6eLht</string>
    <string name="facebook_page_id">102576254608581</string>
    <string name="update_">Update</string>
    <string name="card_no">Enter card no</string>
    <string name="expire_date">Expire date</string>
    <string name="security_code_cvv">CVV</string>
    <string name="subscribe">Subscribe</string>
    <string name="default_notification_chanel_id">sportinglink_notification</string>
    <string name="no_celeb">No special Celebrant in our Calendar for Today . \n  @sportingLink We Celebrate All Birthdays for Today.</string>
    <string name="achievement">Achievement</string>
    <string name="ads_native_units">ca-app-pub-8324355921112909/3421430212</string>
    <string name="ads_banner_units">ca-app-pub-8324355921112909/8865328587</string>
    <string name="category_tip">Category</string>
    <string name="montly_sub">Monthly Subscription of $4.0 for Premium tips</string>
    <string-array name="empty_spinner">
        <item>select item</item>
    </string-array>
    <string-array name="tips">
        <item>home win</item>
        <item>Away win</item>
        <item>Home win or draw</item>
        <item>Away win or draw</item>
        <item>First half draw</item>
        <item>Draw game</item>
        <item>Home to score</item>
        <item>Away to score</item>
        <item>Both to score</item>
        <item>Home score HT</item>
        <item>Away score HT</item>
        <item>Both score HT</item>
        <item>Score over 1.5</item>
        <item>Score over 2.5</item>
        <item>Score over 4.5</item>
        <item>Score under 1.5</item>
        <item>Score under 2.5</item>
        <item>Score under 4.5</item>
        <item>5mins score</item>
        <item>10mins score</item>
        <item>20mins score</item>
        <item>15mins draw</item>
        <item>20mins draw</item>
        <item>30mins draw</item>
        <item>Home red card</item>
        <item>Away red card</item>
        <item>Yellow card 4</item>
        <item>Yellow card 8</item>
        <item>Corner over 6</item>
        <item>Corner over 8</item>
        <item>Correct Score</item>
    </string-array>
</resources>