<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/app_logo"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_lb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dsc4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:hint="@string/code"
        android:layout_marginTop="10dp"
        android:theme="@style/myInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/txt_lb">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/btn_confirm"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintTop_toBottomOf="@id/layout1"/>

    <ProgressBar
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/loading_bar"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:theme="@style/MyBar"
        android:background="@drawable/handler_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>