<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    tools:context=".activities.SubscriptionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tt"
        android:text="@string/montly_sub"
        android:textSize="18sp"
        android:textColor="#EC000000"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout2"
        android:hint="@string/card_no"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_no"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="number"
            android:maxLength="23"
            android:minEms="16"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout3"
        android:hint="@string/expire_date"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/card_expire"
            android:inputType="number"
            android:minEms="5"
            android:maxLength="5"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout4"
        android:hint="@string/security_code_cvv"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/card_code"
            android:inputType="number"
            android:minEms="3"
            android:maxLength="3"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/payment_bar"
        android:background="@drawable/handler_bg"
        android:theme="@style/MyBar"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_subscribe"
        android:text="@string/subscribe"
        android:textSize="18sp"
        android:backgroundTint="#26C6DA"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintTop_toBottomOf="@id/layout4"/>

</androidx.constraintlayout.widget.ConstraintLayout>
